fix nav user icon from stretching

--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -146,8 +146,9 @@ a:hover {
 
 .nav-user-icon {
   width: 40px;
+  height: 40px;
   margin-bottom: 14px;
   border-radius: 110px;
-  max-height: 40px;
   cursor: pointer;
+  object-fit: cover;
 }
